--- a/src/views/upload.jade
+++ b/src/views/upload.jade
@@ -16,7 +16,7 @@ block content
 								-}
 							textarea(name='homework', class='form-control', placeholder='提交作业',rows="10",required)
 							.form-control
-							button(class='btn btn-lg btn-primary btn-block', type='submit') Register
+							button(class='btn btn-lg btn-primary btn-block', type='submit') 提交课程
 							span.clearfix
 					#message
 						if message
