--- a/src/views/home.jade
+++ b/src/views/home.jade
@@ -3,17 +3,25 @@ extends layout
 block content
 	div.container
 		div.row
-			div.col-sm-6.col-md-4.col-md-offset-4
+			div.col-sm-6.col-md-6.col-md-offset-3
 				#user
-					h1.text-center.login-title Welcome #{user.role} #{user.firstName}. Check your details below:
+					h1.text-center.login-title Welcome #{user.role} #{user.firstName} #{user.lastName}. Check your details below:
 						div.signup-wall
-							ul.user-details
-								li Username ---> #{user.username}
-								li Email    ---> #{user.email}
-								li First Name ---> #{user.firstName}
-								li Last Name ---> #{user.lastName}
-								li role	---> #{user.role}
-						a(href='/signout', class='text-center new-account') Sign Out
+							table.table
+								thead
+									tr
+										td Username
+										td Email
+										td Role
+										td 学生ID
+									tr
+										td #{user.username}
+										td #{user.email}
+										td #{user.role}
+										td #{user.schoolId}
+							h3 现在时间 #{date}
+							a.btn.btn-primary(href='/signout') signout
+
 				- var k = false;
 				if user.role == "teacher"
 					- k = true;
@@ -50,6 +58,7 @@ block content
 						td 学生ID
 						td 学生姓名
 						td 项目名称
+						td 提交时间
 						td 查看作业
 						td 作业评分
 
@@ -59,14 +68,18 @@ block content
 							td #{uploads[c].schoolId}
 							td #{uploads[c].student}
 							td #{uploads[c].course}
+							td #{uploads[c].uploadDate}
 							td
 							if uploads[c].score
 								td #{uploads[c].score}
 							else
-								td
-									form(class='form-inline', action='/score?uploadId=#{uploads[c]._id}', method='POST')
-										input.form-control(type="text",name="score")
-										button(class='btn btn-lg btn-primary btn-block', type='submit') 评分
+								if uploads[c].timeout
+									td
+										form(class='form-inline', action='/score?uploadId=#{uploads[c]._id}', method='POST')
+											input.form-control(type="text",name="score")
+											button(class='btn btn-lg btn-primary btn-block', type='submit') 评分
+								else
+									td 还没到达评分时间
 					-}
 
 		else
@@ -79,6 +92,7 @@ block content
 						td 学生ID
 						td 学生姓名
 						td 项目名称
+						td 提交时间
 						td 作业评分
 				tbody
 					- for (var c = 0;c<uploads.length;c++){
@@ -86,5 +100,6 @@ block content
 							td #{uploads[c].schoolId}
 							td #{uploads[c].student}
 							td #{uploads[c].course}
+							td #{uploads[c].uploadDate}
 							td #{uploads[c].score}
 					-}
